navigation bar to the main panel
I pinned the navigation bar to the main panel